# process-extras

./: .hgtags  README.md  process-extras.cabal
src/: Utils.hs
src/System/Process/: ByteString.hs  ChunkE.hs  Chunks.hs  Common.hs  Extras.hs  ListLike.hs  String.hs  Text.hs
src/System/Process/ByteString/: Lazy.hs
src/System/Process/ListLike/: Classes.hs  Instances.hs  LazyString.hs  Read.hs  ReadNoThreads.hs  StrictString.hs
src/System/Process/Text/: Lazy.hs
tests/: Interactive.hs  Main.hs  script1.hs  script2.hs  script4.hs  text
